# python-grace

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  README.md  build.py  pyproject.toml  setup.cfg  tox.ini
.chglog/: CHANGELOG.tpl.md
.github/workflows/: deploy.yml  lint.yml  release.yml  test.yml
grace/: __init__.py  __main__.py  click_ext.py  main.py  utils.py  version.py
grace/commands/: __init__.py  raw.py  template.py
grace/patch/grace/: CMakeLists.txt
grace/patch/grace/basesv5.1/: CMakeLists.txt
grace/patch/grace/chanel/: CMakeLists.txt
grace/patch/grace/cmake/: FindLibM.cmake
grace/patch/grace/dbkinem/: CMakeLists.txt
grace/patch/grace/gracefig/: CMakeLists.txt
grace/patch/grace/grcfort/: CMakeLists.txt
grace/patch/grace/grclib/: CMakeLists.txt  config.h.in
grace/patch/grace/grcsrc/: CMakeLists.txt
grace/patch/grace/grcutl/: CMakeLists.txt
grace/patch/grace/kinemlib/: CMakeLists.txt
grace/patch/grace/model/: CMakeLists.txt
grace/patch/grace/netlib/blas/: CMakeLists.txt
grace/patch/grace/netlib/lapack/double/: CMakeLists.txt
grace/patch/grace/templates/: CMakeLists.txt
grace/patch/grcext/: CMakeLists.txt
grace/patch/paramcard/: CMakeLists.txt
scripts/: make-release.sh
tests/: test_grace.py  test_install.py
