add_library(
  bases
  bases.f
  bhinit.f
  bhplot.f
  bhrset.f
  bhsave.f
  bschck.f
  bsdate.f
  bsdims.f
  bsetgu.f
  bsetgv.f
  bsgetw.f
  bsgrid.f
  bshbok.f
  bsinfo.f
  bsinit.f
  bsintg.f
  bslist.f
  bsordr.f
  bsparm.f
  bsprnt.f
  bsputw.f
  bsread.f
  bstcnv.f
  bstime.f
  bsutim.f
  bswrit.f
  dhfill.f
  dhinit.f
  dhplot.f
  drn.f
  drnset.f
  shcler.f
  shfill.f
  shinit.f
  shplot.f
  shrset.f
  shupdt.f
  spchck.f
  sphbok.f
  sphist.f
  spinfo.f
  sprgen.f
  spring.f
  uxdate_.c
  uxtime_.c
  xhchck.f
  xhfill.f
  xhinit.f
  xhordr.f
  xhplot.f
  xhrnge.f
  xhscle.f)
install(TARGETS bases ARCHIVE DESTINATION lib)
