add_library(
  chanel
  ffs.f
  ffs0.f
  ffsccc.f
  ffsccn.f
  ffscnc.f
  ffscnn.f
  ffsncc.f
  ffsncn.f
  ffsnnc.f
  ffsnnn.f
  ffv.f
  ffv0.f
  ffvccc.f
  ffvccn.f
  ffvcnc.f
  ffvcnn.f
  ffvmm1.f
  ffvmm2.f
  ffvmm3.f
  ffvmm4.f
  ffvmm5.f
  ffvmm6.f
  ffvmm7.f
  ffvmm8.f
  ffvmm9.f
  ffvncc.f
  ffvncn.f
  ffvnnc.f
  ffvnnn.f
  phaseq.f
  pol.f
  pola.f
  polp.f
  sfsccc.f
  sfsccn.f
  sfscnc.f
  sfscnn.f
  sfsncc.f
  sfsncn.f
  sfsnnc.f
  sfsnnn.f
  sfvccc.f
  sfvccn.f
  sfvcnc.f
  sfvcnn.f
  sfvncc.f
  sfvncn.f
  sfvnnc.f
  sfvnnn.f
  smconf.f
  smcons.f
  smconv.f
  smcpol.f
  smextf.f
  smextv.f
  smffs.f
  smffv_new2.f
  smggg.f
  smgggg.f
  sminit.f
  smintf.f
  smintp.f
  smintt.f
  smintv.f
  sminv0.f
  smprpd.f
  smsss.f
  smssss.f
  smssv.f
  smssvv.f
  smsvv.f
  smvvv.f
  smvvvv.f
  smvww.f
  splt.f
  spltq.f
  ssv.f
  vvs.f
  vvv.f
  vvvv.f
  wwva.f)
install(TARGETS chanel ARCHIVE DESTINATION lib)
